# slack_bot

./: .env-sample  README.md  bot.py  pyproject.toml
